# plot

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  share_memory.cpp  share_memory.h
